--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="traffic_summary">Enable &amp; configure network indicator in status bar</string>
     <string name="quicksettings_title">Quick settings</string>
     <string name="quicksettings_summary">Customize the overall view &amp; functionality</string>
+		<string name="appearance_category">Appearance</string>
     <!-- Notifications -->
     <string name="led_notifications_title">LED notifications</string>
     <string name="led_notifications_summary">Enable/disable the LED light. Configure colors &amp; behavior</string>
@@ -180,5 +181,11 @@
     <string name="category_qstiles_landscape">Adjust tile layout for landscape view</string>
     <string name="qs_rows_landscape_title">Number of rows</string>
     <string name="qs_columns_landscape_title">Number of columns</string>
+
+    <!-- Option to show brightness bar in quick settings -->
+    <string name="brightness_control_category">Brightness control</string>
+    <string name="show_brightness_title">Brightness slider</string>
+    <string name="show_brightness_summary_on">Showing brightness slider in QS panel</string>
+    <string name="show_brightness_summary_off">Brightness slider is hidden</string>
 
 </resources>
