Run Lockscreen tuner from our Settings
Change-Id: I248e92675a66415b47b0c685e64e28753ff398f7

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -178,4 +178,6 @@
     <string name="lockscreen_battery_info_title">Battery info</string>
     <string name="lockscreen_battery_info_summary">Display negotiated charger max current-voltage and battery temperature on lockscreen while charging</string>
 
+    <!-- Lockscreen icons -->
+    <string name="lockscreen_tuner_title">Lockscreen shortcuts</string>
 </resources>
