Allow vibration instead of beep for in-call notifications [2/2]
Change-Id: Id0922dad9d901fceaab1b73c4af559ff6149d53b

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -472,4 +472,8 @@
     <string name="screen_off_animation_color">Color fade</string> 
     <string name="screen_off_animation_crt">CRT</string> 
     <string name="screen_off_animation_scale">Scale</string> 
+
+    <!-- In-call vibration optoins -->
+    <string name="incall_notifications_vibrate">Vibrate for Notifications</string>
+
 </resources>
