--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -188,4 +188,8 @@
     <string name="show_brightness_summary_on">Showing brightness slider in QS panel</string>
     <string name="show_brightness_summary_off">Brightness slider is hidden</string>
 
+    <!-- Quick Settings brightness slider -->
+    <string name="qs_brightness_position_bottom_title">Brightness slider on bottom</string>
+    <string name="qs_brightness_position_bottom_summary">Show a brightness slider on bottom quick settings</string>
+
 </resources>
