--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -204,4 +204,8 @@
     <string name="brightness_icon_title">Auto Brightness Icon</string>
     <string name="brightness_icon_summary">Show a brightness icon to the left of the brighness slider to adjust auto-brightness</string>
 
+    <!-- QuickSettings Panel Transparency -->
+    <string name="qs_panel_alpha_category">Advanced panel theming</string>
+    <string name="qs_panel_alpha_title">QS panel opacity</string>
+
 </resources>
