--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -66,6 +66,8 @@
     <string name="screen_capture_options_category_title">Screen capture options</string>
     <string name="miscellaneous_category_title">Miscellaneous</string>
     <string name="ime_title">Keyboard and IME Settings</string>
+    <string name="animations_title">Animations</string>
+    <string name="system_keyguard_animation_title" >System and Keyguard Animation</string>
 
     <!-- Fragments -->
     <string name="headset_title">Headset</string>
