Add lockscreen media art blur option
Change-Id: I29d37709446a54835ec32685c909946b9799d611

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -171,4 +171,7 @@
     <string name="swap_volume_buttons_title">Key swapper</string>
     <string name="swap_volume_buttons_summary">Swap volume key controls when in landscape view</string>
 
+    <!-- Configurable lockscreen media blur strength -->
+    <string name="lockscreen_media_blur_title">Lockscreen media art blur level</string>
+
 </resources>
